# nyaa-search-api

./: .gitignore  Cargo.toml
src/: main.rs  models.rs  utils.rs
src/model/: result.rs
src/service/: scraper.rs
