[package]
name = "nyaa-search-api"
version = "0.1.0"
authors = ["helder"]
edition = "2018"

[dependencies]
chrono = "0.4.23"
tokio = { version= "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
reqwest = {version = "0.11.14", features = ["blocking"]}
scraper = "0.12.0"

