[package]
name = "nyaa_search_api"
version = "0.1.0"
edition = "2021"
authors = ["Helder Sérvio <heldersrvio@gmail.com>"]

[dependencies]
gotham = "0.6"
gotham_derive = "0.6"
reqwest = { version = "0.11.14", features = ["blocking"] }
html5ever = "0.23"
chrono = "0.4.23"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.152"
serde_json = "1.0"
select = "0.6.0"
url = "2.1"
mime = "0.3.16"

[dependencies.tokio]
version = "1.2"
features = ["full"]

